[package]
name = "evolution_vk"
version = "0.0.0"
edition = "2024"
authors = ["TheGreatWolf"]

[dependencies]
vulkano = "0.34.2"
winit = { version = "0.30.13", features = ["rwh_05"] }
default = "0.1.2"
log = "0.4.29"
env_logger = "0.11.10"
vulkano-shaders = "0.34.0"
paste = "1.0.15"
glam = "0.32.1"
smallvec = "1.15.1"
modular-bitfield = "0.13.1"
enum-map = "2.7.3"
spin_sleep = "1.3.3"
light_ranged_integers = "0.1.3"
image = "0.25.10"

[profile.dev]
opt-level = 1

[profile.release]
debug = true